--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "bun run .src/index.ts",
-    "dev": "bun run src/index.ts"
+    "dev": "bun run -w src/index.ts"
   },
   "keywords": [],
   "author": "",
